# lia-deploy-test

./: .4variation_nouns.csv.icloud  .gitignore  .historico  4plus_variation_nouns.csv  4plus_variation_nouns_human_related.csv  Dockerfile  Makefile  README.md  __pyproject.toml  all_nouns.csv  app.py  catalog-info.yaml  data_preprocess.py  debugg.ipynb  docker-compose.yml  entrypoint.sh  infinitive_verbs.csv  multiapp.py  person_noun.py  pyproject.toml  synonyms_for_gender_nouns.py
.github/workflows/: manual_update_secrets_production.yaml  on_pull_request.yml  on_push_main.yml
.streamlit/: config.toml  credentials.toml
data/: infinitive_verbs.csv
functions/: adjectives.ipynb  adjectives_with_gender.py  checking_person_related_word.py  creating_frequency_words.py  person_noun.py  relativePronoun_w_indicativeVerb.py  scraping_infinitive_verbs.py  synonyms.py  synonyms_for_gender_nouns.py  translate_pt_to_en.py  who_w_indicativeVerb.py
pages/: about_us.py  lia.py  rules.py
rules/: AdjectivesRule.py  BadWordsRule.py  BaseRule.py  HeSheRule.py  MeaninglessDetRule.py  ThatWhoRule.py  ThisGroupRule.py
