[tool.poetry]
name = "lia"
version = "1.0.0"
description = "LIA"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
fsspec = "0.8.7"
googletrans = "4.0.0-rc1"
Levenshtein = "^0.15.0"
matplotlib = "^3.4.3"
mlconjug3 = "^3.7.20"
nltk = "^3.7"
numpy = "1.21.0"
python = "^3.7"
pandas = "1.1.5"
protobuf = "~3.19.0" #temp due to a bug in streamlit https://discuss.streamlit.io/t/typeerror-descriptors-cannot-not-be-created-directly/25639
pt_core_news_lg = {url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.1.0/pt_core_news_lg-3.1.0.tar.gz#egg=pt_core_news_lg"}
pysinonimos = "^0.1.1"
spacy = "^3.1.3"
st-annotated-text = "^2.0.0"
streamlit = "^0.89.0"
watchdog = "^2.1.5"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

