[tool.poetry]
name = "lia"
version = "1.0.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.12.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
st-annotated-text = "^3.0.0"
spacy = "^3.4.1"
nltk = "^3.7"
googletrans = "^3.0.0"
Levenshtein = "^0.20.2"
pysinonimos = "^0.1.1"
mlconjug3 = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
